# CRISPIN

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  VERSION  index.html  main.nf  main.py  mkdocs.yml  modules.json  nextflow.config  nextflow_schema.json  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: auto-format.yml  build.yml  docker.yml  draft-release.yml  projects.yml
assets/: README.md  samplesheet_test.csv  samplesheet_test_biowulf.csv  samplesheet_test_mle.csv  slurm_header_biowulf.sh  slurm_header_frce.sh
assets/lib/: README.md
changelog/: index.html
conf/: base.config  biowulf.config  ci_stub.config  containers.config  frce.config  interactive.config  modules.conf  modules.config  slurm.config  slurmint.config  test.config  test_mle.config
contributing/: index.html
dev/: 404.html  index.html  search.html
dev/changelog/: index.html
dev/contributing/: index.html
dev/getting-started/: index.html
dev/nextflow/: index.html
dev/params/: index.html
dev/release-guide/: index.html
dev/search/: search_index.json
docker/: README.md
docker/bagel/: Dockerfile  README.md  meta.yml
docker/drugz/: Dockerfile  README.md  meta.yml
docs/: getting-started.md  index.md  nextflow.md  params.md  release-guide.md  requirements.txt
getting-started/: index.html
lib/: Utils.groovy
modules/CCBR/cutadapt/: main.nf  meta.yml
modules/local/: align.nf  bagel.nf  drugz.nf  mageck.nf  qc.nf  samplesheet_check.nf  trim.nf
nextflow/: index.html
release-guide/: index.html
search/: search_index.json
src/: __main__.py  util.py
submodules/local/: bagel.nf  input_check.nf  mageck.nf  trim_align.nf  trim_count.nf
subworkflows/local/: input_check.nf  mageck.nf  trim_count.nf
tests/assets/: samplesheet.csv
