[build-system]
requires = [
    "setuptools >= 62.3.0",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name = 'CRISPIN'
dynamic = ['version','readme']
description = "TODO insert description of CRISPIN here"
keywords = ["bioinformatics", "nextflow"]
authors = [
    {name = "Kelly Sovacool", email = "kelly.sovacool@nih.gov"},
    {name = "Nathan Wong"},
    {name = "Samantha Sevilla"},
    {name = "Vishal Koparde", email = "vishal.koparde@nih.gov"},
    {name = "Nathan Wong"},
]
maintainers = [
    {name = "CCR Collaborative Bioinformatics Resource", email = "ccbr@mail.nih.gov"},
]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT license",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.7"
dependencies = [
    "pyyaml >= 6.0",
    "Click >= 8.1.3",
    "ccbr_tools@git+https://github.com/CCBR/Tools@v0.3"
]

[project.optional-dependencies]
dev = [
    "black >= 22.0.0",
    "pre-commit",
    "nf-core >= 3.2.0"
]
test = [
    "pytest"
]

[project.scripts]
crispin = "crispin.src.__main__:main"

[project.urls]
Homepage = "https://ccbr.github.io/CRISPIN"
Documentation = "https://ccbr.github.io/CRISPIN"
Repository = "https://github.com/CCBR/CRISPIN"
Changelog = "https://github.com/CCBR/CRISPIN/blob/main/docs/CHANGELOG.md"

[tool.setuptools.package-dir]
crispin = "."

[tool.setuptools.package-data]
"*" = ["CITATION.cff", "LICENSE", "VERSION", "main.nf", "nextflow.config", "assets/**", "assets/**", "bin/**", "conf/**", "modules/**", "subworkflows/**"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "README.md"}
